--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=alexander.diasbrito@gmail.com
 default.recipient=alexander.diasbrito@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id= 
+aws.secret_access_key= 
+s3.bucket=curso-spring-ionic-alexander
+s3.region=sa-east-1
